--- a/home.html
+++ b/home.html
@@ -17,6 +17,8 @@
       <a href="home.html">
         <img class="navbarimg" src="logo_placeholder_loginpage copy.jpeg" alt="top left corner logo">
       </a>
+      <a class="nav-link active" aria-current="page" href="about.html">About</a>
+      <a class="nav-link active" aria-current="page" href="login.html">Login</a>
       
       
     </div>
