--- a/home.html
+++ b/home.html
@@ -19,11 +19,17 @@
       </a>
       <a class="nav-link active" aria-current="page" href="about.html">About</a>
       <a class="nav-link active" aria-current="page" href="login.html">Login</a>
-      
-      
+      <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
     </div>
   </nav>
-  </div>
+
+  <!-- ✅ Centered responsive image with rounded corners -->
+  <main class="d-flex justify-content-center align-items-center vh-100">
+  <img src="shoping_cart_consept.png" 
+       alt="Shopping cart project illustration" 
+       class="img-fluid rounded-4 shadow"
+       style="max-width: 600px; width: 100%; height: auto;">
+</main>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
