--- a/login.html
+++ b/login.html
@@ -10,37 +10,33 @@
   <link rel="stylesheet" href="login.css">
   <title>login page</title>
 </head>
-<body>
+<body class="bg-light">
   
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-transparent"> 
     <div class="container">
       <a href="home.html">
         <img class="navbarimg" src="logo_placeholder_loginpage copy.jpeg" alt="top left corner logo">
       </a>
-      <a href="home.html">
-        Home
-      </a>
-      
-      
     </div>
   </nav>
 
-  </div>
-  <div class="card mx-auto mt-5" id="login-card" >
-      <img id="login-logo-img" src="logo_placeholder_loginpage copy.jpeg" alt="logo_placeholder_loginpage">
+  <!-- ✅ Perfectly centered card -->
+  <main class="d-flex justify-content-center align-items-center min-vh-100">
+    <div class="card w-100 shadow-sm" id="login-card" style="max-width: 400px;">
+      <img id="login-logo-img" src="logo_placeholder_loginpage copy.jpeg" alt="logo_placeholder_loginpage" class="mx-auto mt-4" style="width:80px; height:80px;">
       <div class="card-body">
-          <h5 class="card-title text-center">Log In</h5>
-          <div  class="form-outline mb-4">
-              <input type="email" placeholder="ID tag"> 
-          </div>
-          <div  class="form-outline mb-4">
-              <input type="password" placeholder="Password"> 
-          </div>
-      <button type="button" class="btn btn-outline-primary">Log in</button>
+        <h5 class="card-title text-center">Log In</h5>
+        <div class="form-outline mb-3">
+          <input type="email" class="form-control" placeholder="ID tag">
+        </div>
+        <div class="form-outline mb-3">
+          <input type="password" class="form-control" placeholder="Password">
+        </div>
+        <button type="button" class="btn btn-outline-primary w-100">Log in</button>
       </div>
-
-  </div>
-
+    </div>
+  </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
