Update files with latest changes

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
   <img src="shoping_cart_consept.png" 
        alt="Shopping cart project illustration" 
        class="img-fluid rounded-4 shadow"
-       style="max-width: 600px; width: 100%; height: auto;">
+       style="max-width: 500px; width: 100%; height: auto; margin-bottom: auto;">
 </main>
 
 
