--- a/home.html
+++ b/home.html
@@ -1,37 +1,159 @@
-<!doctype html>
-<html lang="en">
+<!doctype html> <!-- מציין שהקובץ הוא דף HTML5 -->
+<html lang="en"> <!-- מגדיר את שפת הדף לאנגלית -->
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8"> <!-- תומך בתווים באנגלית, עברית ועוד -->
+  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- הופך את הדף לרספונסיבי למסכים קטנים -->
+  <title>Smart Cart | Home</title> <!-- הכותרת שמופיעה בלשונית הדפדפן -->
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- קישור לספריית Bootstrap לעיצוב מהיר -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- קובץ ה-CSS האישי של העמוד -->
   <link rel="stylesheet" href="home.css">
-  <title>Home page</title>
 </head>
+
 <body>
-  
-  <nav class="navbar navbar-expand-lg navbar-dark bg-transparent"> 
-    <div class="container">
-      <a href="home.html">
-        <img class="navbarimg" src="logo_placeholder_loginpage copy.jpeg" alt="top left corner logo">
+
+  <!-- סרגל ניווט עליון קבוע לכל האתר -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top"> <!-- fixed-top שומר את הניווט קבוע בראש הדף -->
+    <div class="container"> <!-- ממרכז את התוכן של הניווט -->
+      <a class="navbar-brand d-flex align-items-center" href="home.html"> <!-- לוגו וכיתוב יחד -->
+        <img src="logo_placeholder_loginpage copy.jpeg" class="navbarimg me-2" alt="Logo"> <!-- תמונת לוגו -->
+        <span class="brand-text">Smart Cart</span> <!-- שם האתר -->
       </a>
-      <a class="nav-link active" aria-current="page" href="about.html">About</a>
-      <a class="nav-link active" aria-current="page" href="login.html">Login</a>
-      <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+
+      <!-- כפתור שמופיע במסכים קטנים כדי לפתוח/לסגור את התפריט -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+              aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span> <!-- אייקון של "תפריט" (שלושה פסים) -->
+      </button>
+
+      <!-- תפריט הקישורים -->
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3"> <!-- ms-auto מזיז את הקישורים לצד ימין -->
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li> <!-- קישור לעמוד אודות -->
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li> <!-- קישור לעמוד צור קשר -->
+          <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li> <!-- קישור לעמוד התחברות -->
+        </ul>
+      </div>
     </div>
   </nav>
 
-  <!-- ✅ Centered responsive image with rounded corners -->
-  <main class="d-flex justify-content-center align-items-center vh-100">
-  <img src="shoping_cart_consept.png" 
-       alt="Shopping cart project illustration" 
-       class="img-fluid rounded-4 shadow"
-       style="max-width: 500px; width: 100%; height: auto; margin-bottom: auto;">
-</main>
+  <!-- החלק הראשי של הדף (Hero section) -->
+  <header class="container hero"> <!-- אזור עם כותרת גדולה ותמונה -->
+    <div class="row align-items-center g-4"> <!-- שורה עם ריווח בין אלמנטים -->
+      
+      <!-- צד שמאל: טקסט -->
+      <div class="col-12 col-lg-6"> <!-- תופס חצי מסך במחשב, מלא במובייל -->
+        <h1 class="display-5 fw-bold mb-3">Shopping made effortless</h1> <!-- כותרת ראשית -->
+        <p class="lead text-muted mb-4"> <!-- פסקה קצרה שמסבירה את הרעיון -->
+          Smart Cart follows you safely and smoothly—no pushing, no hassle. Powered by vision, sensors and on-device intelligence.
+        </p>
+        <div class="d-flex flex-wrap gap-2"> <!-- שני כפתורים זה לצד זה -->
+          <a href="about.html" class="btn btn-primary btn-pill">Learn more</a> <!-- כפתור לכיוון עמוד אודות -->
+          <a href="contact.html" class="btn btn-outline-primary btn-pill">Get in touch</a> <!-- כפתור לכיוון עמוד צור קשר -->
+        </div>
+      </div>
 
+      <!-- צד ימין: תמונה -->
+      <div class="col-12 col-lg-6 text-center mx-auto">
+        <img src="shoping_cart_consept.png" class="hero-img" alt="Smart Cart concept"> <!-- תמונה של המוצר -->
+      </div>
+    </div>
+  </header>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <!-- מקטע עם שלושת היתרונות של Smart Cart -->
+  <section class="container py-5"> <!-- py-5 מוסיף רווח אנכי למעלה ולמטה -->
+    <h2 class="text-center mb-4">Why Smart Cart?</h2> <!-- כותרת המקטע -->
+    <div class="row g-4"> <!-- שלוש עמודות -->
+      <div class="col-12 col-md-4"> <!-- יתרון ראשון -->
+        <div class="feature-card h-100 p-4"> <!-- כרטיס עם צל וריווח פנימי -->
+          <h5 class="mb-2">Autonomous following</h5>
+          <p class="mb-0 text-muted">Advanced camera & sensors identify and follow you reliably in-store.</p>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-4"> <!-- יתרון שני -->
+        <div class="feature-card h-100 p-4">
+          <h5 class="mb-2">Smooth control</h5>
+          <p class="mb-0 text-muted">Microcontrollers & FPGA provide precise motion and real-time decisions.</p>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-4"> <!-- יתרון שלישי -->
+        <div class="feature-card h-100 p-4">
+          <h5 class="mb-2">Future-ready</h5>
+          <p class="mb-0 text-muted">Roadmap includes product scanning, shelf navigation, and checkout-free payment.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- מקטע הסבר: איך זה עובד -->
+  <section class="container py-5">
+    <h2 class="text-center mb-4">How it works</h2>
+    <div class="row g-4">
+      <div class="col-12 col-md-4"> <!-- שלב 1 -->
+        <div class="step-card p-4 h-100">
+          <span class="step-num">1</span> <!-- עיגול עם מספר השלב -->
+          <h6 class="mt-2">Identify</h6>
+          <p class="text-muted mb-0">The cart recognizes you using computer vision.</p>
+        </div>
+      </div>
+      <div class="col-12 col-md-4"> <!-- שלב 2 -->
+        <div class="step-card p-4 h-100">
+          <span class="step-num">2</span>
+          <h6 class="mt-2">Follow</h6>
+          <p class="text-muted mb-0">It follows your pace, avoiding obstacles safely.</p>
+        </div>
+      </div>
+      <div class="col-12 col-md-4"> <!-- שלב 3 -->
+        <div class="step-card p-4 h-100">
+          <span class="step-num">3</span>
+          <h6 class="mt-2">Assist</h6>
+          <p class="text-muted mb-0">Optional add-ons: scanning, navigation, and payments.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- קריאה לפעולה (CTA) -->
+  <section class="container py-5">
+    <div class="cta-card p-4 p-md-5 text-center">
+      <h3 class="mb-2">Ready to elevate the in-store experience?</h3>
+      <p class="text-muted mb-4">Let’s explore how Smart Cart fits your store or research project.</p>
+      <a href="contact.html" class="btn btn-primary btn-pill">Contact us</a> <!-- כפתור יצירת קשר -->
+    </div>
+  </section>
+
+  <!-- קבצי JavaScript של Bootstrap – מאפשרים תפריטים ואלמנטים אינטראקטיביים -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- סקריפט קטן שמפעיל אפקטים וצללים כשגוללים את הדף -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => { // מריץ את הקוד אחרי שהדף נטען
+      const reveal = (selector) => { // פונקציה שחושפת אלמנטים עם אנימציה
+        const els = document.querySelectorAll(selector);
+        if (!('IntersectionObserver' in window)) { // בדיקה אם הדפדפן תומך באנימציה
+          els.forEach(e=>e.classList.add('show'));
+          return;
+        }
+        const io = new IntersectionObserver(entries => {
+          entries.forEach(e => { if (e.isIntersecting) e.target.classList.add('show'); }); // מוסיף מחלקת 'show' כשהאלמנט נכנס למסך
+        }, { threshold: 0.15 });
+        els.forEach(el => io.observe(el)); // עוקב אחרי כל אלמנט שנבחר
+      };
+      reveal('.feature-card');
+      reveal('.step-card');
+
+      // מסמן את הדף הנוכחי כ"פעיל" בתפריט הניווט
+      document.querySelectorAll('.nav-link').forEach(a=>{
+        if(location.pathname.toLowerCase().endsWith(a.getAttribute('href').toLowerCase())) 
+          a.classList.add('active');
+      });
+    });
+  </script>
+  <footer class="footer">
+  <p>© 2025 Smart Cart. All rights reserved.</p>
+</footer>
 </body>
 </html>
