--- a/contact.html
+++ b/contact.html
@@ -1,93 +1,139 @@
-<!doctype html>
-<html lang="en">
+<!doctype html> <!-- מציין לדפדפן שזהו דף HTML5 -->
+<html lang="en"> <!-- מגדיר את שפת הדף לאנגלית -->
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8"> <!-- תומך בתווים בינלאומיים -->
+  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- מתאים את הדף למסכים ניידים -->
+  <title>Smart Cart | Contact</title> <!-- כותרת הדף שמופיעה בלשונית הדפדפן -->
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- קישור לספריית Bootstrap לעיצוב מהיר ואחיד -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- קובץ ה-CSS האישי של העמוד -->
   <link rel="stylesheet" href="contact.css">
-  <title>Home page</title>
 </head>
-<body class="bg-light">
+<body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-transparent" dir="ltr">
-  <div class="container d-flex justify-content-between align-items-center">
-    <a href="home.html">
-      <img class="navbarimg" src="logo_placeholder_loginpage copy.jpeg" alt="top left corner logo">
-    </a>
+  <!-- סרגל ניווט אחיד לכל הדפים -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top"> <!-- navbar קבוע למעלה -->
+    <div class="container"> <!-- מרכז את התוכן -->
+      <a class="navbar-brand d-flex align-items-center" href="home.html"> <!-- לוגו + שם האתר -->
+        <img src="logo_placeholder_loginpage copy.jpeg" class="navbarimg me-2" alt="Logo"> <!-- תמונת לוגו -->
+        <span class="brand-text">Smart Cart</span> <!-- טקסט שם האתר -->
+      </a>
+
+      <!-- כפתור פתיחה של התפריט במובייל -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+              aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span> <!-- אייקון של תפריט (שלושה פסים) -->
+      </button>
+
+      <!-- קישורי הניווט -->
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3"> <!-- ms-auto מזיז את התפריט לצד ימין -->
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li> <!-- קישור לעמוד אודות -->
+          <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li> <!-- העמוד הפעיל -->
+          <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li> <!-- קישור לעמוד התחברות -->
+        </ul>
+      </div>
     </div>
-    </nav>
+  </nav>
 
-  <main class="container py-5 mt-4">
-    <div class="card shadow-sm p-4 mx-auto" style="max-width: 700px;">
-      <h2 class="text-center mb-4">צור קשר</h2>
+  <!-- החלק המרכזי של הדף – טופס יצירת קשר -->
+  <main class="container py-5"> <!-- py-5 מוסיף רווחים אנכיים -->
+    <div class="card shadow-sm p-4 contact-card mx-auto" style="max-width: 700px;"> <!-- כרטיס טופס ממורכז -->
+      <h2 class="mb-3">Get in touch</h2> <!-- כותרת עיקרית -->
+      <p class="text-muted mb-4">Questions, feedback, or partnership ideas? Send us a message.</p> <!-- טקסט תיאורי -->
 
-      <form>
-        <!-- Name -->
-        <div class="mb-3">
-          <label for="name" class="form-label">שם מלא</label>
-          <input type="text" class="form-control" id="name" placeholder="הכנס את שמך" required>
-        </div>
-
-        <!-- Email -->
-        <div class="mb-3">
-          <label for="email" class="form-label">אימייל</label>
-          <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
-        </div>
-
-        <!-- Message -->
-        <div class="mb-3">
-          <label for="message" class="form-label">הודעה</label>
-          <textarea class="form-control" id="message" rows="4" placeholder="כתוב כאן את הודעתך..." required></textarea>
-        </div>
-
-        <!-- Radio buttons -->
-        <div class="mb-3">
-          <label class="form-label">סיבת הפנייה</label><br>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="reason" id="support" value="support" checked>
-            <label class="form-check-label" for="support">תמיכה</label>
+      <!-- טופס יצירת קשר -->
+      <form novalidate> <!-- novalidate מונע בדיקות דפדפן אוטומטיות -->
+        
+        <!-- שורה עם שדות שם פרטי ושם משפחה -->
+        <div class="row g-3"> <!-- g-3 = רווח בין עמודות -->
+          <div class="col-sm-6">
+            <label for="firstName" class="form-label">First name</label> <!-- תווית לשדה -->
+            <input type="text" id="firstName" class="form-control" placeholder="Jane" required> <!-- שדה קלט -->
           </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="reason" id="feedback" value="feedback">
-            <label class="form-check-label" for="feedback">פידבק</label>
+          <div class="col-sm-6">
+            <label for="lastName" class="form-label">Last name</label>
+            <input type="text" id="lastName" class="form-control" placeholder="Doe" required>
           </div>
         </div>
 
-        <!-- Checkboxes -->
-        <div class="mb-3">
-          <label class="form-label">איך נוח ליצור איתך קשר?</label><br>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="byEmail" value="email">
-            <label class="form-check-label" for="byEmail">אימייל</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="byPhone" value="phone">
-            <label class="form-check-label" for="byPhone">טלפון</label>
-          </div>
+        <!-- שדה אימייל -->
+        <div class="mt-3"> <!-- רווח מעל -->
+          <label for="email" class="form-label">Email</label>
+          <input type="email" id="email" class="form-control" placeholder="name@example.com" required>
         </div>
 
-        <!-- Select -->
-        <div class="mb-3">
-          <label for="urgency" class="form-label">דחיפות</label>
-          <select class="form-select" id="urgency" required>
-            <option value="" disabled selected>בחר...</option>
-            <option value="low">נמוכה</option>
-            <option value="medium">בינונית</option>
-            <option value="high">גבוהה</option>
+        <!-- בחירת נושא הפנייה -->
+        <div class="mt-3">
+          <label for="topic" class="form-label">Topic</label>
+          <select id="topic" class="form-select" required> <!-- תפריט נפתח -->
+            <option value="" selected disabled>Select a topic…</option> <!-- ברירת מחדל -->
+            <option value="support">Support</option>
+            <option value="partnership">Partnership</option>
+            <option value="press">Press</option>
+            <option value="other">Other</option>
           </select>
         </div>
 
-        <!-- Submit button -->
-        <div class="text-center">
-          <button type="submit" class="btn btn-outline-primary">שלח</button>
+        <!-- קבוצת כפתורי רדיו (בחירה אחת) -->
+        <div class="mt-3">
+          <label class="form-label">Preferred contact method</label> <!-- כותרת הקבוצה -->
+          <div class="d-flex flex-wrap gap-3"> <!-- מסדר את הכפתורים בשורה -->
+            <div class="form-check"> <!-- אפשרות 1 -->
+              <input class="form-check-input" type="radio" name="contactMethod" id="contactEmail" value="email" checked>
+              <label class="form-check-label" for="contactEmail">Email</label>
+            </div>
+            <div class="form-check"> <!-- אפשרות 2 -->
+              <input class="form-check-input" type="radio" name="contactMethod" id="contactPhone" value="phone">
+              <label class="form-check-label" for="contactPhone">Phone</label>
+            </div>
+            <div class="form-check"> <!-- אפשרות 3 -->
+              <input class="form-check-input" type="radio" name="contactMethod" id="contactOther" value="other">
+              <label class="form-check-label" for="contactOther">Other</label>
+            </div>
+          </div>
         </div>
+
+        <!-- שדה ההודעה -->
+        <div class="mt-3">
+          <label for="message" class="form-label">Message</label>
+          <textarea id="message" rows="5" class="form-control" placeholder="Write your message…" required></textarea>
+        </div>
+
+        <!-- תיבת סימון לעדכונים -->
+        <div class="form-check mt-3">
+          <input class="form-check-input" type="checkbox" id="updates">
+          <label class="form-check-label" for="updates">Send me product updates</label>
+        </div>
+
+        <!-- הודעה קטנה מתחת לטופס -->
+        <small class="text-muted d-block mt-2">We’ll reply within 2 business days.</small>
+
+        <!-- כפתור שליחה -->
+        <button type="submit" class="btn btn-primary w-100 mt-4">Send message</button>
       </form>
     </div>
   </main>
 
+  <!-- תחתית הדף -->
+  <footer class="container py-4 text-center">
+    <small class="text-muted">© 2025 Smart Cart — All rights reserved</small> <!-- זכויות יוצרים -->
+  </footer>
+
+  <!-- קובץ ה-JavaScript של Bootstrap להפעלת תפריט הניווט -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- קוד שמוודא שהשדות מלאים לפני השליחה -->
+  <script>
+    document.querySelector('form').addEventListener('submit', (e) => {
+      if (!e.target.checkValidity()) {  // אם יש שדה לא תקין
+        e.preventDefault();             // מונע שליחה
+        e.stopPropagation();            // עוצר התנהגות ברירת מחדל
+      }
+      e.target.classList.add('was-validated'); // מוסיף עיצוב שגיאה לשדות
+    });
+  </script>
 </body>
 </html>
